src/parser/.antlr/FormGeneratorParser.java
// Generated from c:/Users/RSF/OneDrive/BCS/cpsc 410/Group14Project1/src/parser/FormGeneratorParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FormGeneratorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OBJECT_START=1, OBJECT_END=2, LIST_START=3, LIST_END=4, SEP=5, COLON=6, 
		PAREN_START=7, PAREN_END=8, STRING=9, NUM=10, REGEX=11, PAGES_KEY=12, 
		FUNCTIONS_KEY=13, QUESTIONS_KEY=14, ID_KEY=15, HEADER_KEY=16, GOTO_KEY=17, 
		VARIABLES_KEY=18, INSTRUCTIONS_KEY=19, DISPLAY_QUESTIONS_KEY=20, TYPE_KEY=21, 
		LABEL_KEY=22, OPTIONS_KEY=23, DEPENDS_ON_KEY=24, DISPLAY_IF_KEY=25, LOOP_KEY=26, 
		IS_REQUIRED_KEY=27, CORRECT_ANSWER_KEY=28, DISPLAY_ALL=29, TEXT_INPUT=30, 
		RADIO=31, CHECKBOX=32, DROPDOWN=33, RETURN=34, IF_KEY=35, ELSE_KEY=36, 
		FORM_OBJ_KEY=37, DOT=38, FORM_STATE_KEY=39, STATIC_FORM_NAME=40, TRUE=41, 
		FALSE=42, PLUS=43, MINUS=44, MULTIPLY=45, DIVIDE=46, MODULO=47, EQUAL=48, 
		NOT_EQUAL=49, GREATER=50, LESS=51, GREATER_EQUAL=52, LESS_EQUAL=53, VARIABLE_NAME=54, 
		LOOP_INDEX=55, WS=56;
	public static final int
		RULE_program = 0, RULE_pages = 1, RULE_page_array = 2, RULE_page = 3, 
		RULE_page_fields = 4, RULE_id_field = 5, RULE_header_field = 6, RULE_instructions_field = 7, 
		RULE_questions_field = 8, RULE_goTo_field = 9, RULE_displayQuestions_field = 10, 
		RULE_variables = 11, RULE_variables_object = 12, RULE_variable_value = 13, 
		RULE_question_array = 14, RULE_question = 15, RULE_question_fields = 16, 
		RULE_type_field = 17, RULE_label_field = 18, RULE_options_field = 19, 
		RULE_dependsOn_field = 20, RULE_displayIf_field = 21, RULE_loop_field = 22, 
		RULE_isRequired_field = 23, RULE_correctAnswer_field = 24, RULE_array = 25, 
		RULE_array_value = 26, RULE_object = 27, RULE_object_value = 28, RULE_question_type = 29, 
		RULE_select_question_type = 30, RULE_functions = 31, RULE_function_array = 32, 
		RULE_function = 33, RULE_function_params = 34, RULE_parameter = 35, RULE_function_body = 36, 
		RULE_statement = 37, RULE_function_call = 38, RULE_conditional = 39, RULE_condition = 40, 
		RULE_cond_body = 41, RULE_expression = 42, RULE_math_expression = 43, 
		RULE_string_expression = 44, RULE_boolean_expression = 45, RULE_static_function = 46, 
		RULE_form_state_access = 47, RULE_path_to_key = 48, RULE_boolean = 49, 
		RULE_math_op = 50, RULE_string_equality_op = 51, RULE_num_equality_op = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "pages", "page_array", "page", "page_fields", "id_field", 
			"header_field", "instructions_field", "questions_field", "goTo_field", 
			"displayQuestions_field", "variables", "variables_object", "variable_value", 
			"question_array", "question", "question_fields", "type_field", "label_field", 
			"options_field", "dependsOn_field", "displayIf_field", "loop_field", 
			"isRequired_field", "correctAnswer_field", "array", "array_value", "object", 
			"object_value", "question_type", "select_question_type", "functions", 
			"function_array", "function", "function_params", "parameter", "function_body", 
			"statement", "function_call", "conditional", "condition", "cond_body", 
			"expression", "math_expression", "string_expression", "boolean_expression", 
			"static_function", "form_state_access", "path_to_key", "boolean", "math_op", 
			"string_equality_op", "num_equality_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'['", "']'", "','", "':'", "'('", "')'", null, null, 
			null, "'pages'", "'functions'", "'questions'", "'id'", "'header'", "'goTo'", 
			"'vars'", "'instructions'", "'displayQuestions'", "'type'", "'label'", 
			"'options'", "'dependsOn'", "'displayIf'", "'loop'", "'isRequired'", 
			"'correctAnswer'", "'all'", "'textInput'", "'radio'", "'checkbox'", "'dropdown'", 
			"'return'", "'if'", "'else'", "'Form'", "'.'", "'FormState'", null, "'true'", 
			"'false'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>'", 
			"'<'", "'>='", "'<='", null, "'loopIndex'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OBJECT_START", "OBJECT_END", "LIST_START", "LIST_END", "SEP", 
			"COLON", "PAREN_START", "PAREN_END", "STRING", "NUM", "REGEX", "PAGES_KEY", 
			"FUNCTIONS_KEY", "QUESTIONS_KEY", "ID_KEY", "HEADER_KEY", "GOTO_KEY", 
			"VARIABLES_KEY", "INSTRUCTIONS_KEY", "DISPLAY_QUESTIONS_KEY", "TYPE_KEY", 
			"LABEL_KEY", "OPTIONS_KEY", "DEPENDS_ON_KEY", "DISPLAY_IF_KEY", "LOOP_KEY", 
			"IS_REQUIRED_KEY", "CORRECT_ANSWER_KEY", "DISPLAY_ALL", "TEXT_INPUT", 
			"RADIO", "CHECKBOX", "DROPDOWN", "RETURN", "IF_KEY", "ELSE_KEY", "FORM_OBJ_KEY", 
			"DOT", "FORM_STATE_KEY", "STATIC_FORM_NAME", "TRUE", "FALSE", "PLUS", 
			"MINUS", "MULTIPLY", "DIVIDE", "MODULO", "EQUAL", "NOT_EQUAL", "GREATER", 
			"LESS", "GREATER_EQUAL", "LESS_EQUAL", "VARIABLE_NAME", "LOOP_INDEX", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FormGeneratorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormGeneratorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode OBJECT_START() { return getToken(FormGeneratorParser.OBJECT_START, 0); }
		public PagesContext pages() {
			return getRuleContext(PagesContext.class,0);
		}
		public TerminalNode OBJECT_END() { return getToken(FormGeneratorParser.OBJECT_END, 0); }
		public TerminalNode EOF() { return getToken(FormGeneratorParser.EOF, 0); }
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(OBJECT_START);
			setState(107);
			pages();
			{
			setState(108);
			match(SEP);
			setState(109);
			functions();
			}
			{
			setState(111);
			match(SEP);
			setState(112);
			variables();
			}
			setState(114);
			match(OBJECT_END);
			setState(115);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PagesContext extends ParserRuleContext {
		public TerminalNode PAGES_KEY() { return getToken(FormGeneratorParser.PAGES_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Page_arrayContext page_array() {
			return getRuleContext(Page_arrayContext.class,0);
		}
		public PagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterPages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitPages(this);
		}
	}

	public final PagesContext pages() throws RecognitionException {
		PagesContext _localctx = new PagesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pages);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(PAGES_KEY);
			setState(118);
			match(COLON);
			setState(119);
			page_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Page_arrayContext extends ParserRuleContext {
		public TerminalNode LIST_START() { return getToken(FormGeneratorParser.LIST_START, 0); }
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public TerminalNode LIST_END() { return getToken(FormGeneratorParser.LIST_END, 0); }
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public Page_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterPage_array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitPage_array(this);
		}
	}

	public final Page_arrayContext page_array() throws RecognitionException {
		Page_arrayContext _localctx = new Page_arrayContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_page_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LIST_START);
			setState(122);
			page();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(123);
				match(SEP);
				setState(124);
				page();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(LIST_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PageContext extends ParserRuleContext {
		public List<TerminalNode> OBJECT_START() { return getTokens(FormGeneratorParser.OBJECT_START); }
		public TerminalNode OBJECT_START(int i) {
			return getToken(FormGeneratorParser.OBJECT_START, i);
		}
		public List<Page_fieldsContext> page_fields() {
			return getRuleContexts(Page_fieldsContext.class);
		}
		public Page_fieldsContext page_fields(int i) {
			return getRuleContext(Page_fieldsContext.class,i);
		}
		public List<TerminalNode> OBJECT_END() { return getTokens(FormGeneratorParser.OBJECT_END); }
		public TerminalNode OBJECT_END(int i) {
			return getToken(FormGeneratorParser.OBJECT_END, i);
		}
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitPage(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_page);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(OBJECT_START);
			setState(133);
			page_fields();
			setState(134);
			match(OBJECT_END);
			setState(142);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(135);
					match(SEP);
					setState(136);
					match(OBJECT_START);
					setState(137);
					page_fields();
					setState(138);
					match(OBJECT_END);
					}
					} 
				}
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Page_fieldsContext extends ParserRuleContext {
		public Id_fieldContext id_field() {
			return getRuleContext(Id_fieldContext.class,0);
		}
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public Header_fieldContext header_field() {
			return getRuleContext(Header_fieldContext.class,0);
		}
		public Instructions_fieldContext instructions_field() {
			return getRuleContext(Instructions_fieldContext.class,0);
		}
		public GoTo_fieldContext goTo_field() {
			return getRuleContext(GoTo_fieldContext.class,0);
		}
		public Questions_fieldContext questions_field() {
			return getRuleContext(Questions_fieldContext.class,0);
		}
		public DisplayQuestions_fieldContext displayQuestions_field() {
			return getRuleContext(DisplayQuestions_fieldContext.class,0);
		}
		public Page_fieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_fields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterPage_fields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitPage_fields(this);
		}
	}

	public final Page_fieldsContext page_fields() throws RecognitionException {
		Page_fieldsContext _localctx = new Page_fieldsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_page_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			id_field();
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(146);
				match(SEP);
				setState(147);
				header_field();
				}
				break;
			}
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(150);
				match(SEP);
				setState(151);
				instructions_field();
				}
				break;
			}
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(154);
				match(SEP);
				setState(155);
				goTo_field();
				}
				break;
			}
			setState(160);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(158);
				match(SEP);
				setState(159);
				questions_field();
				}
				break;
			}
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEP) {
				{
				setState(162);
				match(SEP);
				setState(163);
				displayQuestions_field();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Id_fieldContext extends ParserRuleContext {
		public TerminalNode ID_KEY() { return getToken(FormGeneratorParser.ID_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(FormGeneratorParser.STRING, 0); }
		public Id_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterId_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitId_field(this);
		}
	}

	public final Id_fieldContext id_field() throws RecognitionException {
		Id_fieldContext _localctx = new Id_fieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_id_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(ID_KEY);
			setState(167);
			match(COLON);
			setState(168);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Header_fieldContext extends ParserRuleContext {
		public TerminalNode HEADER_KEY() { return getToken(FormGeneratorParser.HEADER_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(FormGeneratorParser.STRING, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode VARIABLE_NAME() { return getToken(FormGeneratorParser.VARIABLE_NAME, 0); }
		public Header_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterHeader_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitHeader_field(this);
		}
	}

	public final Header_fieldContext header_field() throws RecognitionException {
		Header_fieldContext _localctx = new Header_fieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_header_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(HEADER_KEY);
			setState(171);
			match(COLON);
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(172);
				match(STRING);
				}
				break;
			case 2:
				{
				setState(173);
				function_call();
				}
				break;
			case 3:
				{
				setState(174);
				expression();
				}
				break;
			case 4:
				{
				setState(175);
				match(VARIABLE_NAME);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Instructions_fieldContext extends ParserRuleContext {
		public TerminalNode INSTRUCTIONS_KEY() { return getToken(FormGeneratorParser.INSTRUCTIONS_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(FormGeneratorParser.STRING, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode VARIABLE_NAME() { return getToken(FormGeneratorParser.VARIABLE_NAME, 0); }
		public Instructions_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterInstructions_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitInstructions_field(this);
		}
	}

	public final Instructions_fieldContext instructions_field() throws RecognitionException {
		Instructions_fieldContext _localctx = new Instructions_fieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instructions_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(INSTRUCTIONS_KEY);
			setState(179);
			match(COLON);
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(180);
				match(STRING);
				}
				break;
			case 2:
				{
				setState(181);
				function_call();
				}
				break;
			case 3:
				{
				setState(182);
				expression();
				}
				break;
			case 4:
				{
				setState(183);
				match(VARIABLE_NAME);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Questions_fieldContext extends ParserRuleContext {
		public TerminalNode QUESTIONS_KEY() { return getToken(FormGeneratorParser.QUESTIONS_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Question_arrayContext question_array() {
			return getRuleContext(Question_arrayContext.class,0);
		}
		public Questions_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterQuestions_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitQuestions_field(this);
		}
	}

	public final Questions_fieldContext questions_field() throws RecognitionException {
		Questions_fieldContext _localctx = new Questions_fieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_questions_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(QUESTIONS_KEY);
			setState(187);
			match(COLON);
			setState(188);
			question_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GoTo_fieldContext extends ParserRuleContext {
		public TerminalNode GOTO_KEY() { return getToken(FormGeneratorParser.GOTO_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(FormGeneratorParser.STRING, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public GoTo_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goTo_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).enterGoTo_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormGeneratorParserListener ) ((FormGeneratorParserListener)listener).exitGoTo_field(this);
		}
	}

	public final GoTo_fieldContext goTo_field() throws RecognitionException {
		GoTo_fieldContext _localctx = new GoTo_fieldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_goTo_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(GOTO_KEY);
			setState(191);
			match(COLON);
			setState(195);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(192);
				match(STRING);
				}
				break;
			case 2:
				{
				setState(193);
				function_call();
				}
				break;
			case 3:
				{
				setState(194);
				expression();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
